vbnc/vbnc/tests/Errors/30650.vb
Enum E As Double
    e
End Enum